--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <li><a href="#" class="active">a</a></li>
       <li><a href="#">b</a></li>
       <li><a href="#">c</a></li>
+      <li><a href="#">d</a></li>
     </ul>
     <div id="text">
       <p style="display:block">Test A</p>
